// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el componente con el titulo personalizado 1`] = `
<span
  className="productDescription custom-class"
>
  Custom Product
</span>
`;

exports[`ProductTitle debe mostar el componente con el nombre 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription custom-class"
  >
    Coffee - sin imagen
  </span>
</div>
`;
